--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "laravel/framework": "^12.0",
+        "php": "^8.3",
+        "laravel/framework": "^12.49",
         "tcytra/enraiged-avatars": "^0.4",
         "tcytra/enraiged-forms": "^0.3",
         "tcytra/enraiged-support": "^0.4",
